주유소 스크립트 업데이트

--- a/주유소데이터 분석/서울시 주유소 유가 데이터 분석.ipynb
+++ b/주유소데이터 분석/서울시 주유소 유가 데이터 분석.ipynb
@@ -36,14 +36,29 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Playdata\\AppData\\Local\\Temp\\ipykernel_16584\\4080736814.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-06-17T04:38:27.371953Z",
@@ -318,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-06-17T04:38:27.387910Z",
@@ -343,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-06-17T04:38:27.403867Z",
@@ -385,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-06-17T04:38:27.419791Z",
@@ -409,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-06-17T04:38:27.435783Z",
@@ -455,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-06-17T04:38:27.451702Z",
@@ -595,7 +610,7 @@
        "4   1887  1737  1587     0  강남구  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-06-17T04:38:27.467660Z",
@@ -616,82 +631,189 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0   1970-01-01 00:00:00.020220101\n",
-       "1   1970-01-01 00:00:00.020220102\n",
-       "2   1970-01-01 00:00:00.020220103\n",
-       "3   1970-01-01 00:00:00.020220104\n",
-       "4   1970-01-01 00:00:00.020220105\n",
-       "Name: 기간, dtype: datetime64[ns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 기간 컬럼을 datetime 타입으로 변경\n",
-    "display(pd.to_datetime(total_df[\"기간\"]).head())"
+    "total_df[\"기간\"] = pd.to_datetime(total_df[\"기간\"],format=\"%Y%m%d\")\n",
+    "total_df.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-06-17T04:38:27.483617Z",
      "start_time": "2022-06-17T04:38:27.470653Z"
     },
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>번호</th>\n",
+       "      <th>지역</th>\n",
+       "      <th>상호</th>\n",
+       "      <th>주소</th>\n",
+       "      <th>기간</th>\n",
+       "      <th>상표</th>\n",
+       "      <th>셀프여부</th>\n",
+       "      <th>고급휘발유</th>\n",
+       "      <th>휘발유</th>\n",
+       "      <th>경유</th>\n",
+       "      <th>실내등유</th>\n",
+       "      <th>구</th>\n",
+       "      <th>월</th>\n",
+       "      <th>일</th>\n",
+       "      <th>요일</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A0006039</td>\n",
+       "      <td>서울 강남구</td>\n",
+       "      <td>(유)동하석유 힐탑셀프주유소</td>\n",
+       "      <td>서울 강남구 논현로 640</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>SK에너지</td>\n",
+       "      <td>셀프</td>\n",
+       "      <td>1887</td>\n",
+       "      <td>1737</td>\n",
+       "      <td>1587</td>\n",
+       "      <td>0</td>\n",
+       "      <td>강남구</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A0006039</td>\n",
+       "      <td>서울 강남구</td>\n",
+       "      <td>(유)동하석유 힐탑셀프주유소</td>\n",
+       "      <td>서울 강남구 논현로 640</td>\n",
+       "      <td>2022-01-02</td>\n",
+       "      <td>SK에너지</td>\n",
+       "      <td>셀프</td>\n",
+       "      <td>1887</td>\n",
+       "      <td>1737</td>\n",
+       "      <td>1587</td>\n",
+       "      <td>0</td>\n",
+       "      <td>강남구</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A0006039</td>\n",
+       "      <td>서울 강남구</td>\n",
+       "      <td>(유)동하석유 힐탑셀프주유소</td>\n",
+       "      <td>서울 강남구 논현로 640</td>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>SK에너지</td>\n",
+       "      <td>셀프</td>\n",
+       "      <td>1887</td>\n",
+       "      <td>1737</td>\n",
+       "      <td>1587</td>\n",
+       "      <td>0</td>\n",
+       "      <td>강남구</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A0006039</td>\n",
+       "      <td>서울 강남구</td>\n",
+       "      <td>(유)동하석유 힐탑셀프주유소</td>\n",
+       "      <td>서울 강남구 논현로 640</td>\n",
+       "      <td>2022-01-04</td>\n",
+       "      <td>SK에너지</td>\n",
+       "      <td>셀프</td>\n",
+       "      <td>1887</td>\n",
+       "      <td>1737</td>\n",
+       "      <td>1587</td>\n",
+       "      <td>0</td>\n",
+       "      <td>강남구</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A0006039</td>\n",
+       "      <td>서울 강남구</td>\n",
+       "      <td>(유)동하석유 힐탑셀프주유소</td>\n",
+       "      <td>서울 강남구 논현로 640</td>\n",
+       "      <td>2022-01-05</td>\n",
+       "      <td>SK에너지</td>\n",
+       "      <td>셀프</td>\n",
+       "      <td>1887</td>\n",
+       "      <td>1737</td>\n",
+       "      <td>1587</td>\n",
+       "      <td>0</td>\n",
+       "      <td>강남구</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0        [2022, 01, 01 00:00:00]\n",
-       "1        [2022, 01, 02 00:00:00]\n",
-       "2        [2022, 01, 03 00:00:00]\n",
-       "3        [2022, 01, 04 00:00:00]\n",
-       "4        [2022, 01, 05 00:00:00]\n",
-       "                  ...           \n",
-       "81788    [2022, 12, 27 00:00:00]\n",
-       "81789    [2022, 12, 28 00:00:00]\n",
-       "81790    [2022, 12, 29 00:00:00]\n",
-       "81791    [2022, 12, 30 00:00:00]\n",
-       "81792    [2022, 12, 31 00:00:00]\n",
-       "Name: 기간, Length: 164482, dtype: object"
+       "         번호      지역               상호              주소         기간     상표 셀프여부  \\\n",
+       "0  A0006039  서울 강남구  (유)동하석유 힐탑셀프주유소  서울 강남구 논현로 640 2022-01-01  SK에너지   셀프   \n",
+       "1  A0006039  서울 강남구  (유)동하석유 힐탑셀프주유소  서울 강남구 논현로 640 2022-01-02  SK에너지   셀프   \n",
+       "2  A0006039  서울 강남구  (유)동하석유 힐탑셀프주유소  서울 강남구 논현로 640 2022-01-03  SK에너지   셀프   \n",
+       "3  A0006039  서울 강남구  (유)동하석유 힐탑셀프주유소  서울 강남구 논현로 640 2022-01-04  SK에너지   셀프   \n",
+       "4  A0006039  서울 강남구  (유)동하석유 힐탑셀프주유소  서울 강남구 논현로 640 2022-01-05  SK에너지   셀프   \n",
+       "\n",
+       "   고급휘발유   휘발유    경유  실내등유    구  월  일  요일  \n",
+       "0   1887  1737  1587     0  강남구  1  1   5  \n",
+       "1   1887  1737  1587     0  강남구  1  2   6  \n",
+       "2   1887  1737  1587     0  강남구  1  3   0  \n",
+       "3   1887  1737  1587     0  강남구  1  4   1  \n",
+       "4   1887  1737  1587     0  강남구  1  5   2  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 기간 컬럼을 이용해 \"월\", \"일\", \"요일\" 컬럼 생성 (dt accessor 이용)\n",
-    "pd.to_datetime(total_df[\"기간\"],format=\"%Y%m%d\").apply(lambda x: x.str.split('-'))"
+    "# 요일 - 0:월, 1:화, 2:수, 3:목, 4:금, 5:토, 6:일 로 변경\n",
+    "total_df['월'],total_df['일'],total_df['요일'] = [eval(f\"test['기간'].dt.{date}\" ) for date in (\"month\",\"day\",\"weekday\")]\n",
+    "total_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-06-17T04:38:27.499576Z",
-     "start_time": "2022-06-17T04:38:27.486611Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# 요일 - 0:월, 1:화, 2:수, 3:목, 4:금, 5:토, 6:일 로 변경\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-06-17T04:38:27.515547Z",
@@ -1091,7 +1213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
