--- a/06_ml/02_첫번째 머신러닝 분석.ipynb
+++ b/06_ml/02_첫번째 머신러닝 분석.ipynb
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -1426,10 +1426,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.sources.Source at 0x1d465719a50>"
+       "<graphviz.sources.Source at 0x23039ee3df0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
