--- a/06_ml/05_평가지표.ipynb
+++ b/06_ml/05_평가지표.ipynb
@@ -2511,11 +2511,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting metrics.py\n"
+     ]
+    }
+   ],
    "source": [
+    "%%writefile metrics.py\n",
     "# 평가 함수들을 제공하는 모듈\n",
+    "\n",
     "\n",
     "__version__ = 1.1\n",
     "\n",
