--- a/06_ml/001-Numpy개요_배열생성_.ipynb
+++ b/06_ml/001-Numpy개요_배열생성_.ipynb
@@ -627,6 +627,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.zeros((5,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
@@ -742,6 +767,24 @@
     "- dtype : 데이터 타입\n",
     "- 1차원 배열만 생성가능"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 3, 5, 7])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -894,35 +937,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([  0.        ,   2.04081633,   4.08163265,   6.12244898,\n",
-       "         8.16326531,  10.20408163,  12.24489796,  14.28571429,\n",
-       "        16.32653061,  18.36734694,  20.40816327,  22.44897959,\n",
-       "        24.48979592,  26.53061224,  28.57142857,  30.6122449 ,\n",
-       "        32.65306122,  34.69387755,  36.73469388,  38.7755102 ,\n",
-       "        40.81632653,  42.85714286,  44.89795918,  46.93877551,\n",
-       "        48.97959184,  51.02040816,  53.06122449,  55.10204082,\n",
-       "        57.14285714,  59.18367347,  61.2244898 ,  63.26530612,\n",
-       "        65.30612245,  67.34693878,  69.3877551 ,  71.42857143,\n",
-       "        73.46938776,  75.51020408,  77.55102041,  79.59183673,\n",
-       "        81.63265306,  83.67346939,  85.71428571,  87.75510204,\n",
-       "        89.79591837,  91.83673469,  93.87755102,  95.91836735,\n",
-       "        97.95918367, 100.        ])"
+       "(array([  0,   2,   4,   6,   8,  10,  12,  14,  16,  18,  20,  22,  24,\n",
+       "         26,  28,  30,  32,  34,  36,  38,  40,  42,  44,  46,  48,  51,\n",
+       "         53,  55,  57,  59,  61,  63,  65,  67,  69,  71,  73,  75,  77,\n",
+       "         79,  81,  83,  85,  87,  89,  91,  93,  95,  97, 100]),\n",
+       " 2.0408163265306123)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "a30"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1116,24 +1149,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.79172504, 0.52889492, 0.56804456, 0.92559664, 0.07103606,\n",
-       "       0.0871293 , 0.0202184 , 0.83261985, 0.77815675, 0.87001215])"
+       "array([[[0.28232933, 0.36172479, 0.76639576]]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "np.random.rand(10)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1203,9 +1233,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[40.20947676],\n",
+       "       [40.04346479],\n",
+       "       [40.02993896],\n",
+       "       [40.21563164],\n",
+       "       [38.95053089]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
@@ -1382,6 +1427,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[11, 10],\n",
+       "       [10, 11]])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randint(low = 10, high = 13,size=(2,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 120,
    "metadata": {},
    "outputs": [
@@ -1461,10 +1527,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 2, 3])"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.choice([1,2,3],size = (3,),replace=True,p=[0.01,0.01,0.98])"
+   ]
   }
  ],
  "metadata": {
