--- a/06_ml/01_머신러닝개요.ipynb
+++ b/06_ml/01_머신러닝개요.ipynb
@@ -36,11 +36,9 @@
    },
    "cell_type": "markdown",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
-    },
-    "tags": []
+    }
    },
    "source": [
     "### 정의\n",
@@ -66,11 +64,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
-    },
-    "tags": []
+    }
    },
    "source": [
     "- **Strong AI (강 인공지능)**\n",
@@ -288,7 +284,7 @@
     "## 지도학습(Supervised Learning)\n",
     "- 모델에게 데이터의 특징(Feature)와 정답(Label)을 알려주며 학습시킨다.\n",
     "- 대부분의 머신러닝은 지도학습이다.\n",
-    "- 지도학습은 <span style = \"color : red\">**분류**</span>와 <span style=\"color:red\">**회귀**</span>로 나뉜다."
+    "- 지도학습은 분류와 회귀로 나뉜다."
    ]
   },
   {
@@ -505,87 +501,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting scikit-learn\n",
-      "  Downloading scikit_learn-1.4.0-1-cp310-cp310-win_amd64.whl.metadata (11 kB)\n",
-      "Requirement already satisfied: numpy<2.0,>=1.19.5 in c:\\users\\playdata\\appdata\\local\\anaconda3\\envs\\ml\\lib\\site-packages (from scikit-learn) (1.26.3)\n",
-      "Collecting scipy>=1.6.0 (from scikit-learn)\n",
-      "  Downloading scipy-1.12.0-cp310-cp310-win_amd64.whl.metadata (60 kB)\n",
-      "     ---------------------------------------- 0.0/60.4 kB ? eta -:--:--\n",
-      "     ---------------------------------------- 60.4/60.4 kB 1.6 MB/s eta 0:00:00\n",
-      "Collecting joblib>=1.2.0 (from scikit-learn)\n",
-      "  Downloading joblib-1.3.2-py3-none-any.whl.metadata (5.4 kB)\n",
-      "Collecting threadpoolctl>=2.0.0 (from scikit-learn)\n",
-      "  Downloading threadpoolctl-3.2.0-py3-none-any.whl.metadata (10.0 kB)\n",
-      "Downloading scikit_learn-1.4.0-1-cp310-cp310-win_amd64.whl (10.6 MB)\n",
-      "   ---------------------------------------- 0.0/10.6 MB ? eta -:--:--\n",
-      "   -- ------------------------------------- 0.6/10.6 MB 17.8 MB/s eta 0:00:01\n",
-      "   ------ --------------------------------- 1.6/10.6 MB 25.0 MB/s eta 0:00:01\n",
-      "   ---------- ----------------------------- 2.7/10.6 MB 24.6 MB/s eta 0:00:01\n",
-      "   -------------- ------------------------- 3.7/10.6 MB 23.8 MB/s eta 0:00:01\n",
-      "   ------------------- -------------------- 5.1/10.6 MB 25.0 MB/s eta 0:00:01\n",
-      "   ------------------------- -------------- 6.8/10.6 MB 25.4 MB/s eta 0:00:01\n",
-      "   ------------------------------ --------- 8.1/10.6 MB 27.3 MB/s eta 0:00:01\n",
-      "   ------------------------------------- -- 9.9/10.6 MB 28.8 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  10.6/10.6 MB 29.7 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 10.6/10.6 MB 26.2 MB/s eta 0:00:00\n",
-      "Downloading joblib-1.3.2-py3-none-any.whl (302 kB)\n",
-      "   ---------------------------------------- 0.0/302.2 kB ? eta -:--:--\n",
-      "   --------------------------------------- 302.2/302.2 kB 18.2 MB/s eta 0:00:00\n",
-      "Downloading scipy-1.12.0-cp310-cp310-win_amd64.whl (46.2 MB)\n",
-      "   ---------------------------------------- 0.0/46.2 MB ? eta -:--:--\n",
-      "   - -------------------------------------- 2.0/46.2 MB 42.9 MB/s eta 0:00:02\n",
-      "   --- ------------------------------------ 3.5/46.2 MB 37.3 MB/s eta 0:00:02\n",
-      "   ---- ----------------------------------- 5.4/46.2 MB 38.3 MB/s eta 0:00:02\n",
-      "   ----- ---------------------------------- 6.8/46.2 MB 36.5 MB/s eta 0:00:02\n",
-      "   ------- -------------------------------- 8.4/46.2 MB 33.8 MB/s eta 0:00:02\n",
-      "   -------- ------------------------------- 10.1/46.2 MB 35.8 MB/s eta 0:00:02\n",
-      "   ---------- ----------------------------- 11.9/46.2 MB 34.6 MB/s eta 0:00:01\n",
-      "   ----------- ---------------------------- 13.0/46.2 MB 34.4 MB/s eta 0:00:01\n",
-      "   ------------ --------------------------- 14.6/46.2 MB 32.8 MB/s eta 0:00:01\n",
-      "   ------------ --------------------------- 15.0/46.2 MB 29.8 MB/s eta 0:00:02\n",
-      "   -------------- ------------------------- 16.3/46.2 MB 29.8 MB/s eta 0:00:02\n",
-      "   -------------- ------------------------- 16.4/46.2 MB 28.5 MB/s eta 0:00:02\n",
-      "   ---------------- ----------------------- 18.7/46.2 MB 28.5 MB/s eta 0:00:01\n",
-      "   ----------------- ---------------------- 20.0/46.2 MB 27.3 MB/s eta 0:00:01\n",
-      "   ------------------ --------------------- 21.1/46.2 MB 26.2 MB/s eta 0:00:01\n",
-      "   ------------------- -------------------- 22.3/46.2 MB 25.1 MB/s eta 0:00:01\n",
-      "   -------------------- ------------------- 23.8/46.2 MB 26.2 MB/s eta 0:00:01\n",
-      "   --------------------- ------------------ 25.1/46.2 MB 26.2 MB/s eta 0:00:01\n",
-      "   ---------------------- ----------------- 26.2/46.2 MB 27.3 MB/s eta 0:00:01\n",
-      "   ----------------------- ---------------- 26.9/46.2 MB 31.2 MB/s eta 0:00:01\n",
-      "   ------------------------ --------------- 28.2/46.2 MB 26.2 MB/s eta 0:00:01\n",
-      "   ------------------------ --------------- 28.9/46.2 MB 23.4 MB/s eta 0:00:01\n",
-      "   ------------------------- -------------- 29.6/46.2 MB 23.4 MB/s eta 0:00:01\n",
-      "   -------------------------- ------------- 30.4/46.2 MB 22.6 MB/s eta 0:00:01\n",
-      "   --------------------------- ------------ 31.9/46.2 MB 23.4 MB/s eta 0:00:01\n",
-      "   ---------------------------- ----------- 32.9/46.2 MB 22.6 MB/s eta 0:00:01\n",
-      "   ----------------------------- ---------- 34.0/46.2 MB 21.9 MB/s eta 0:00:01\n",
-      "   ------------------------------ --------- 35.1/46.2 MB 22.6 MB/s eta 0:00:01\n",
-      "   ------------------------------- -------- 36.3/46.2 MB 21.1 MB/s eta 0:00:01\n",
-      "   -------------------------------- ------- 37.7/46.2 MB 23.4 MB/s eta 0:00:01\n",
-      "   --------------------------------- ------ 39.1/46.2 MB 24.2 MB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 40.5/46.2 MB 27.3 MB/s eta 0:00:01\n",
-      "   ------------------------------------ --- 41.9/46.2 MB 27.3 MB/s eta 0:00:01\n",
-      "   ------------------------------------- -- 43.4/46.2 MB 28.5 MB/s eta 0:00:01\n",
-      "   -------------------------------------- - 44.8/46.2 MB 29.8 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  46.2/46.2 MB 31.2 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  46.2/46.2 MB 31.2 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 46.2/46.2 MB 24.2 MB/s eta 0:00:00\n",
-      "Downloading threadpoolctl-3.2.0-py3-none-any.whl (15 kB)\n",
-      "Installing collected packages: threadpoolctl, scipy, joblib, scikit-learn\n",
-      "Successfully installed joblib-1.3.2 scikit-learn-1.4.0 scipy-1.12.0 threadpoolctl-3.2.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install scikit-learn"
+    "# !pip install scikit-learn"
    ]
   },
   {
