--- a/07_딥러닝/07_CNN_MNIST분류, 모델저장.ipynb
+++ b/07_딥러닝/07_CNN_MNIST분류, 모델저장.ipynb
@@ -272,17 +272,17 @@
     "    # Input Layer\n",
     "    model.add(layers.InputLayer(input_shape=(28, 28, 1)))\n",
     "\n",
-    "    # Feature Extractor -> Convolution Block (Conv + MaxPool) 으로 정의\n",
-    "    model.add(layers.Conv2D(filters=16,\n",
-    "                           kernel_size=(3,3),\n",
-    "                           strides=(1,1),\n",
-    "                           padding='same',\n",
-    "                           activation='relu'\n",
+    "    # Feature Extractor -> Convolution Block (Conv + MaxPool) 으로 정의 (Conv + MaxPool)으로 정의\n",
+    "    model.add(layers.Conv2D(filters=16,  # 필터 개수(추출할 특성 개수)\n",
+    "                           kernel_size=(3,3),  # 필터 크기(h,w). h와 w가 같을 경우 정수로 지정.\n",
+    "                           strides=(1,1),  # 이동 크기(좌우,상하). 좌우와 상하가 같을 경우 정수로 지정. default : 1\n",
+    "                           padding='same', # 인풋 size와 같도록 padding 추가. valid(default) : padding 적용안함\n",
+    "                           activation='relu' # 활성 함수\n",
     "                           ))\n",
     "\n",
-    "    model.add(layers.MaxPooling2D(pool_size=(2, 2),\n",
-    "                                  strides=(2, 2),\n",
-    "                                  padding=\"same\"\n",
+    "    model.add(layers.MaxPooling2D(pool_size=(2, 2), # max값 추출 범위(h,w). h와 w가 같을 경우 정수(default : 2 -> 1/4로 축소)\n",
+    "                                  strides=(2, 2), # 이동 크기 \n",
+    "                                  padding=\"same\" # same : 값의 영역이 pool_size보다 작아도 추출 가능. valid : 값의 영역이 pool_size보다 작으면 추출 X\n",
     "                                  ))\n",
     "\n",
     "    model.add(layers.Conv2D(filters=32, kernel_size=3, padding='same', activation='relu'))\n",
@@ -1207,7 +1207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
@@ -1253,5 +1253,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
